Adding `npm run lint`

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {},
   "devDependencies": {
     "tape": "~2.14.0",
-    "covert": "~1.0.0"
+    "covert": "~1.0.0",
+    "jscs": "~1.5.9"
   },
   "licenses": [{
     "type": "MIT",
@@ -26,7 +27,8 @@
   "scripts": {
     "test": "node test/index.js",
     "coverage": "covert test/*.js",
-    "coverage-quiet": "covert test/*.js --quiet"
+    "coverage-quiet": "covert test/*.js --quiet",
+    "lint": "jscs *.js */*.js"
   },
   "testling": {
     "files": "test/index.js",
