--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 node_js:
+  - "iojs-v1.1"
+  - "iojs-v1.0"
+  - "0.12"
   - "0.11"
   - "0.10"
   - "0.9"
@@ -18,7 +21,9 @@ matrix:
   allow_failures:
     - node_js: "0.11"
     - node_js: "0.9"
+    - node_js: "0.8"
     - node_js: "0.6"
     - node_js: "0.4"
 git:
   detph: 10
+sudo: false
