Remove code coverage tests.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     }
   ],
   "scripts": {
-    "test": "npm run lint && node test/index.js && npm run coverage-quiet",
+    "test": "npm run lint && node test/index.js",
     "coverage": "covert test/*.js",
     "coverage-quiet": "covert test/*.js --quiet",
     "lint": "jscs *.js */*.js"
