--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,14 @@
 language: node_js
 node_js:
+  - "iojs-v2.1"
+  - "iojs-v2.0"
+  - "iojs-v1.8"
+  - "iojs-v1.7"
+  - "iojs-v1.6"
+  - "iojs-v1.5"
+  - "iojs-v1.4"
+  - "iojs-v1.3"
+  - "iojs-v1.2"
   - "iojs-v1.1"
   - "iojs-v1.0"
   - "0.12"
@@ -9,21 +18,23 @@ node_js:
   - "0.8"
   - "0.6"
   - "0.4"
-before_script:
- - npm install
- - npm install istanbul coveralls
-script: npm run travis-test
-
 before_install:
   - '[ "${TRAVIS_NODE_VERSION}" == "0.6" ] || npm install -g npm@~1.4.6'
 matrix:
   fast_finish: true
   allow_failures:
+    - node_js: "iojs-v2.0"
+    - node_js: "iojs-v1.7"
+    - node_js: "iojs-v1.6"
+    - node_js: "iojs-v1.5"
+    - node_js: "iojs-v1.4"
+    - node_js: "iojs-v1.3"
+    - node_js: "iojs-v1.2"
+    - node_js: "iojs-v1.1"
+    - node_js: "iojs-v1.0"
     - node_js: "0.11"
     - node_js: "0.9"
     - node_js: "0.8"
     - node_js: "0.6"
     - node_js: "0.4"
-git:
-  depth: 10
 sudo: false
