--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "devDependencies": {
     "tape": "^4.0.0",
     "covert": "^1.1.0",
-    "jscs": "^1.13.1"
+    "jscs": "^1.13.1",
+    "eslint": "^0.22.1"
   },
   "licenses": [
     {
@@ -41,7 +42,9 @@
     "test": "npm run lint && node test/index.js && npm run coverage-quiet",
     "coverage": "covert test/*.js",
     "coverage-quiet": "covert test/*.js --quiet",
-    "lint": "jscs *.js */*.js"
+    "lint": "npm run jscs && npm run eslint",
+    "jscs": "jscs *.js */*.js",
+    "eslint": "eslint *.js */*.js"
   },
   "testling": {
     "files": "test/index.js",
