--- a/package.json
+++ b/package.json
@@ -27,10 +27,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "tape": "^4.0.0",
+    "tape": "^4.0.1",
     "covert": "^1.1.0",
     "jscs": "^1.13.1",
-    "eslint": "^0.24.0"
+    "eslint": "^1.0.0-rc-3",
+    "@ljharb/eslint-config": "^1.0.3"
   },
   "licenses": [
     {
