--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     }
   ],
   "scripts": {
-    "test": "npm run lint && node test/index.js && npm run coverage-quiet",
+    "test": "npm run lint && npm run tests-only && npm run coverage-quiet",
+    "tests-only": "node test",
     "coverage": "covert test/*.js",
     "coverage-quiet": "covert test/*.js --quiet",
     "lint": "npm run jscs && npm run eslint",
