--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
 	"extends": "@ljharb",
 
 	"rules": {
+		"indent": [2, 4],
 		"max-nested-callbacks": [2, 3],
 		"max-params": [2, 3],
 		"max-statements": [2, 20],
