--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "tape": "^4.6.0",
+    "@ljharb/eslint-config": "^12.2.1",
     "covert": "^1.1.0",
-    "jscs": "^3.0.6",
-    "eslint": "^3.0.0",
-    "@ljharb/eslint-config": "^6.0.0"
+    "eslint": "^4.5.0",
+    "jscs": "^3.0.7",
+    "tape": "^4.8.0"
   },
   "license": "MIT",
   "scripts": {
@@ -60,4 +60,3 @@
     ]
   }
 }
-
