--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,6 +1,9 @@
 {
 	"rules": {
+		"array-bracket-newline": 0,
+		"array-element-newline": 0,
 		"max-statements-per-line": [2, { "max": 2 }],
-		"no-magic-numbers": 0
+		"no-invalid-this": 0,
+		"no-magic-numbers": 0,
 	}
 }
