--- a/.eslintrc
+++ b/.eslintrc
@@ -11,5 +11,14 @@
 		"max-statements": [2, 20],
 		"no-new-func": [1],
 		"strict": [0]
-	}
+	},
+
+	"overrides": [
+		{
+			"files": "test/**",
+			"rules": {
+				"max-lines-per-function": 0,
+			},
+		},
+	],
 }
