Point to the correct file
We should point to the correct file otherwise `commonjs` plugin may fail to resolve the module.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "author": "Raynos <raynos2@gmail.com>",
   "repository": "git://github.com/Raynos/function-bind.git",
-  "main": "index",
+  "main": "index.js",
   "homepage": "https://github.com/Raynos/function-bind",
   "contributors": [
     {
