Revert "Point to the correct file"
This reverts commit 4a766c66ab61cb4fe985b313689e3d36f3c1252e.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "author": "Raynos <raynos2@gmail.com>",
   "repository": "git://github.com/Raynos/function-bind.git",
-  "main": "index.js",
+  "main": "index",
   "homepage": "https://github.com/Raynos/function-bind",
   "contributors": [
     {
