--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "@ljharb/eslint-config": "^21.1.0",
     "aud": "^2.0.3",
+    "auto-changelog": "^2.4.0",
     "eslint": "=8.8.0",
     "in-publish": "^2.0.1",
     "npmignore": "^0.3.0",
@@ -50,7 +51,9 @@
     "test": "npm run tests-only",
     "posttest": "aud --production",
     "tests-only": "nyc tape 'test/**/*.js'",
-    "lint": "eslint --ext=js,mjs ."
+    "lint": "eslint --ext=js,mjs .",
+    "version": "auto-changelog && git add CHANGELOG.md",
+    "postversion": "auto-changelog && git add CHANGELOG.md && git commit --no-edit --amend && git tag -f \"v$(node -e \"console.log(require('./package.json').version)\")\""
   },
   "testling": {
     "files": "test/index.js",
@@ -67,6 +70,14 @@
       "iphone/6.0..latest",
       "android-browser/4.2..latest"
     ]
+  },
+  "auto-changelog": {
+    "output": "CHANGELOG.md",
+    "template": "keepachangelog",
+    "unreleased": false,
+    "commitLimit": false,
+    "backfillLimit": false,
+    "hideCredit": true
   },
   "publishConfig": {
     "ignore": [
